[package]
name = "catan_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
scraper = "0.12.0"
regex = "*"
cdp_client = { path = "/Users/benburk/Desktop/Repos/cdp_client" }
enum-map = "2.2.0"